# bayes-causal-rec

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/: DESIGN.md
experiments/: run_all.py
notebooks/: 00_data_exploration.ipynb  01_bayesian_pmf.ipynb  02_causal_debiasing.ipynb  03_thompson_sampling.ipynb  04_fintech_framing.ipynb
outputs/: phase2_results.txt  phase3_results.json  phase3_results.txt
scripts/: create_notebooks.py  download_data.py  preprocess.py
scripts/evaluation/: calibration.py  metrics.py
scripts/models/: bayesian_pmf.py  deconfounder.py  propensity.py  thompson_sampler.py
src/bcr/: __init__.py
src/bcr/data/: __init__.py  download.py  preprocess.py
src/bcr/evaluation/: calibration.py  metrics.py
src/bcr/models/: bayesian_pmf.py  deconfounder.py  propensity.py  thompson_sampler.py
tests/: test_calibration.py  test_metrics.py  test_models.py  test_preprocess.py
