[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayes-causal-rec"
version = "0.1.0"
description = "Bayesian causal recommender with calibrated exploration: Bayesian PMF, causal debiasing, and Thompson Sampling."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "martinl5" }]
keywords = [
    "bayesian-inference",
    "causal-inference",
    "recommender-systems",
    "pymc",
    "numpyro",
    "thompson-sampling",
]

dependencies = [
    "pymc>=5.10",
    "arviz>=0.18",
    "pytensor>=2.20",
    "numpyro>=0.15",
    "jax>=0.4.26",
    "jaxlib>=0.4.26",
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "requests>=2.31",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.6",
    "jupyter",
    "nbconvert",
    "nbformat",
]

[project.scripts]
bcr-download = "bcr.data.download:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line length handled by the formatter

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
# run_all.py suppresses warnings before importing heavy libraries on purpose.
"experiments/*" = ["E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
